--- a/LAB2/Codigo/frontend/src/App.css
+++ b/LAB2/Codigo/frontend/src/App.css
@@ -40,3 +40,23 @@
 .read-the-docs {
   color: #888;
 }
+
+.aluno {
+  margin: 2em auto;
+  padding: 1em;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  max-width: 600px;
+  text-align: left;
+  background-color: #f9f9f9;
+}
+
+.aluno h2 {
+  margin-bottom: 1em;
+  color: #333;
+}
+
+.aluno p {
+  margin: 0.5em 0;
+  color: #555;
+}
