--- a/LAB2/Codigo/frontend/css/listEmpresas.css
+++ b/LAB2/Codigo/frontend/css/listEmpresas.css
@@ -174,3 +174,21 @@ button:nth-child(2) {
     background-color: #dc3545; /* Vermelho para remover vantagem */
     margin-top: 10px;
 }
+
+.voltar-btn {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #007bff;
+    background-color: #e9f0f7;
+    padding: 8px 14px;
+    border-radius: 8px;
+    font-weight: bold;
+    transition: background-color 0.3s ease;
+  }
+  
+  .voltar-btn:hover {
+    background-color: #d0e2f0;
+  }
