--- a/LAB2/Codigo/frontend/css/cadastroEmpresaParceira.css
+++ b/LAB2/Codigo/frontend/css/cadastroEmpresaParceira.css
@@ -162,3 +162,18 @@ button:hover {
 .voltar-btn:hover {
   background-color: #d0e2f0;
 }
+
+.login-link {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.login-link a {
+  color: #666;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+.login-link a:hover {
+  text-decoration: underline;
+}
