--- a/LAB2/Codigo/frontend/css/login.css
+++ b/LAB2/Codigo/frontend/css/login.css
@@ -38,14 +38,28 @@ input {
     font-size: 14px;
 }
 
-.forgot-password {
-    text-align: right;
+.links {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: -5px;
+}
+
+.forgot-password, .register-link {
     color: #666;
     text-decoration: none;
     font-size: 14px;
 }
 
-.forgot-password:hover {
+.forgot-password {
+    text-align: right;
+}
+
+.register-link {
+    text-align: center;
+}
+
+.forgot-password:hover, .register-link:hover {
     text-decoration: underline;
 }
 
